--- a/store/package.json
+++ b/store/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.2.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -28,7 +29,9 @@
     "clsx": "^2.1.1",
     "cookies-next": "^6.0.0",
     "date-fns-jalali": "^4.1.0-0",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.515.0",
     "moment": "^2.30.1",
     "moment-jalaali": "^0.10.4",
@@ -40,6 +43,7 @@
     "react-masonry-css": "^1.0.16",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-simple-wysiwyg": "^3.4.0",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.6",
     "swiper": "^11.2.10",
