--- a/store/package.json
+++ b/store/package.json
@@ -37,11 +37,13 @@
     "moment-jalaali": "^0.10.4",
     "next": "15.3.3",
     "react": "^18.2.0",
+    "react-date-object": "^2.1.9",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "react-modern-calendar-datepicker": "^3.1.6",
+    "react-multi-date-picker": "^4.5.2",
     "react-simple-wysiwyg": "^3.4.0",
     "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
