--- a/store/package.json
+++ b/store/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.4",
@@ -37,6 +40,7 @@
     "moment-jalaali": "^0.10.4",
     "next": "15.3.3",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-date-object": "^2.1.9",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.0",
@@ -44,6 +48,7 @@
     "react-masonry-css": "^1.0.16",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-multi-date-picker": "^4.5.2",
+    "react-router-dom": "^7.8.0",
     "react-simple-wysiwyg": "^3.4.0",
     "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
