--- a/store/package.json
+++ b/store/package.json
@@ -49,9 +49,11 @@
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.8.0",
+    "react-select": "^5.10.2",
     "react-simple-wysiwyg": "^3.4.0",
     "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "sonner": "^2.0.6",
     "swiper": "^11.2.10",
     "tailwind-variants": "^1.0.0"
